--- a/SimulationApp/src/SimulationApp.mxml
+++ b/SimulationApp/src/SimulationApp.mxml
@@ -2,7 +2,7 @@
 <s:Application xmlns:fx="http://ns.adobe.com/mxml/2009" 
 			   xmlns:s="library://ns.adobe.com/flex/spark"
 			   xmlns:local="*"
-			   applicationDPI="320" xmlns:ui="org.projetandtech.sim.ui.*" 
+			   applicationDPI="160" xmlns:ui="org.projetandtech.sim.ui.*" 
 			   >
 	
 
@@ -10,5 +10,5 @@
 	<fx:Declarations>
 		<!-- Placer ici les éléments non visuels (services et objets de valeur, par exemple). -->
 	</fx:Declarations>
-	<ui:MainPanels width="100%" height="100%"/>
+	<ui:MainPanel width="100%" height="100%"/>
 </s:Application>
