--- a/SimulationLib/proto/ui/LogPanel.mxml
+++ b/SimulationLib/proto/ui/LogPanel.mxml
@@ -3,33 +3,19 @@
 		 xmlns:s="library://ns.adobe.com/flex/spark" 
 		 xmlns:mx="library://ns.adobe.com/flex/mx" 
 		 height.ouvert = "300" height.ferme = "40"
+		 initialize="init()"
 		 currentState="ferme"
 		 styleName="logPanel">
 	<fx:Declarations>
-		<fx:XMLList id="params" xmlns="">
-			<object param="posX" value="12.3"/> 
-			<object param="PosY" value="15.2"/> 
-			<object param="PosO" value="ca blop blop un peu beaucoup"/> 
-			<object param="Pression du reacteur externe" value="123'000 bar"/> 
-			<object param="Usure du lance-flame" value="12%"/> 
-			<object param="Vitesse" value="13 noeuds"/> 
-			<object param="Heure de marrée haute" value="13h20"/> 
-			<object param="Stock de laitues" value="7 (ou 8 peut-être)"/> 
-			<object param="Hou qu'il est content le chaton" value="Ronron ronron"/> 
-			<object param="Utilité du PSoC" value="4% max"/> 
-			<object param="Solde de club" value="-4 631.94€"/> 
-			<object param="Valeur marchande du robot" value="-7 449€"/> 
-			<object param="Temps de cuisson" value="15 minutes"/> 
-			<object param="Robot adverses bousillés" value="14 si on compte celui qui a prit feu tout seul"/> 
-			<object param="Programme télé" value="TF1: Les Experts, France2:Cold Case, ..."/> 
-			<object param="Nombre de procès intenté contre le club" value="116"/> 
-			<object param="Goût du pissenlit" value="Chais pas, pas gouté encore"/> 
-		</fx:XMLList>
 	</fx:Declarations>
 	
 	
 	<fx:Script> 
 		<![CDATA[
+			protected function init(FlexEvent:Event){
+				
+				
+			}
 			protected function panelOpener_clickHandler(event:MouseEvent):void
 			{
 				currentState = (currentState == "ouvert") ? "ferme" : "ouvert";
